# minutes_of_meeting

./: .gitignore  README.md  crewai_flow.html  pyproject.toml
meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
src/minutes_of_meeting/: main.py
src/minutes_of_meeting/crews/minutes_of_meeting/: minutes_of_meeting_crew.py
src/minutes_of_meeting/crews/minutes_of_meeting/config/: agents.yaml  tasks.yaml
src/minutes_of_meeting/crews/send_email/: send_email.py
src/minutes_of_meeting/crews/send_email/config/: agents.yaml  tasks.yaml
src/minutes_of_meeting/crews/send_email/tools/: email_tool.py  email_utility.py
transcripts/: transcript_EarningsCall.txt
